# Daily-News-Email-Digest-in-Python

./: .gitignore  README.md  main.py  pyproject.toml  send_email.py
